D8CORE-3169: fix spacing around mailto icon

--- a/core/src/scss/utilities/mixins/button/_button-primary.scss
+++ b/core/src/scss/utilities/mixins/button/_button-primary.scss
@@ -9,14 +9,25 @@
 @mixin button-primary {
   @extend %button-base;
   @include padding(1rem 2rem 1.15rem);
-
   background-color: color(brand--bright);
   color: color(link--reverse);
+
+  &::after,
+  &::before {
+    background-color: color(brand--bright);
+    color: color(link--reverse);
+  }
 
   &:hover,
   &:focus {
     background-color: color(bg--reverse);
     color: color(link--reverse);
+
+    &::after,
+    &::before {
+      background-color: color(bg--reverse);
+      color: color(link--reverse);
+    }
   }
 
   &:focus {
