--- a/core/src/scss/utilities/mixins/link/_link-icon.scss
+++ b/core/src/scss/utilities/mixins/link/_link-icon.scss
@@ -35,8 +35,7 @@
       &::#{$location} {
         @if $animate == 'down' {
           transform: translateY(0.2em);
-        }
-        @else if $animate == 'up' {
+        } @else if $animate == 'up' {
           transform: translateY(-0.2em);
         }
       }
@@ -45,19 +44,24 @@
     // Icon $location after link text
     @if $location == 'after' {
       &::after {
-        @include margin(null 0.3em $vertical 0.4em);
+        @include margin(null 0.1em $vertical 0.4em);
         background-color: color(link);
-        transition: transform 0.2s ease-in-out, mask-image 0.2s ease-in-out;
+
+        @if $animate == 'right' or $animate == 'true' or $animate == 'topright'
+        {
+          @include margin(null 0.3em $vertical 0.4em);
+          transition: transform 0.2s ease-in-out, mask-image 0.2s ease-in-out;
+        }
       }
 
       &:hover,
       &:focus {
         &::after {
           background-color: color(link--hover);
+
           @if $animate == 'right' or $animate == 'true' {
             transform: translateX(0.2em);
-          }
-          @else if $animate == 'topright' {
+          } @else if $animate == 'topright' {
             transform: translate3d(0.15em, -0.15em, 0);
           }
         }
@@ -67,8 +71,11 @@
     // If icon $location is not after then it'll be before!
     @else {
       &::before {
-        @include margin(null 0.4em $vertical 0.3em);
-        transition: transform 0.2s ease-in-out, mask-image 0.2s ease-in-out;
+        @include margin(null 0.1em $vertical 0.3em);
+        @if $animate == 'left' or $animate == 'true' {
+          @include margin(null 0.4em $vertical 0.3em);
+          transition: transform 0.2s ease-in-out, mask-image 0.2s ease-in-out;
+        }
       }
 
       &:hover,
